# qorex

./: LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: adding-rules.md  detection-rules.md  usage.md
qorex/: cli.py  models.py  tui.py
qorex/output/: terminal.py
qorex/report/: json_report.py
qorex/rules/: aes.py  base.py  dh.py  dsa.py  ecc.py  registry.py  rsa.py  sha.py
qorex/scanner/: coordinator.py  language_detector.py  python_scanner.py  regex_scanner.py
tests/rules/: test_rules.py
tests/scanner/: test_coordinator.py
