[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qorex"
version = "0.0.1"
description = "Scan codebases for quantum-vulnerable cryptography and get NIST PQC migration guidance"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Qorex", email = "pochian@gmail.com" }]
keywords = ["cryptography", "post-quantum", "pqc", "security", "nist", "compliance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "textual>=0.47",
]

[project.scripts]
qorex = "qorex.cli:main"

[project.urls]
Repository = "https://github.com/quip0/qorex"

[tool.setuptools.packages.find]
where = ["."]
include = ["qorex*"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
